# Date-Time-Aggregator

./: Cargo.toml  README.md
.test_data/: csv-stdin_test_1.csv  json-stdin_test_1.json  simple-stdin_test_1
assets/: default_formats.yml
src/: data.rs  error.rs  lib.rs  main.rs  round.rs  timespan.rs
src/aggregators/: count.rs  max.rs  max_min.rs  maximum.rs  min.rs  mod.rs  range.rs  split.rs
src/input/: csv.rs  file.rs  json.rs  mod.rs  stdin.rs
