[package]
authors = ["hts"]
edition = "2018"
name = "date-time-aggregator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dta"
path = "src/main.rs"
required-features = ["bin-deps", "json-parser", "csv-parser", "file-input", "stdin-input"]

[features]
bin-deps = ["structopt", "simplelog"]
csv-parser = ["csv"]
default = []
file-input = ["glob"]
json-parser = ["serde_json"]
stdin-input = []

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
csv = {version = "1.1.6", optional = true}
glob = {version = "0.3.0", optional = true}
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1.0", optional = true}
simplelog = {version = "0.9.0", optional = true}
structopt = {version = "0.3.21", optional = true}
