[package]
authors = ["hts"]
edition = "2018"
name = "date-time-aggregator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dta"
path = "src/main.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
csv = "1.1.6"
gjson = "0.7"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
simplelog = "0.9.0"
structopt = "0.3.21"
